<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    style="@style/HuaHanSoft.Fill.Wr"
    android:background="@drawable/hhsoft_shape_dialog_frame_bg"
    >
    <RelativeLayout
        style="@style/HuaHanSoft.Fill.Wr"
        android:visibility="visible"
        android:padding="16dp">
        <ImageView
            android:id="@+id/huahansoft_iv_dialog_icon"
            style="@style/HuaHanSoft.Wrap"
            android:layout_marginRight="16dp"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/huahansoft_tv_dialog_title"
            style="@style/HuaHanSoft.Text.Title.Fill.16"
            android:text="@string/huahansoft_dialog_tip"
            android:layout_toRightOf="@+id/huahansoft_iv_dialog_icon"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <TextView
        android:id="@+id/huahansoft_tv_dialog_content"
        style="@style/HuaHanSoft.Fill.Wr"
        android:textColor="@color/defaultBlackLight"
        android:textSize="14sp"
        android:text="确定发布该朋友圈吗？"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        />
    <LinearLayout
        style="@style/HuaHanSoft.Fill.Wr"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/huahansoft_tv_dialog_action_neutral"
            style="@style/HuaHanSoft.Dialog.Action.Neutral"
            android:text="@string/huahansoft_dialog_more_info"
            android:visibility="visible"
            />
        <TextView
            android:id="@+id/huahansoft_tv_dialog_action_negative"
            style="@style/HuaHanSoft.Dialog.Action"
            android:text="@string/huahansoft_cancel"
            />
        <TextView
            android:id="@+id/huahansoft_tv_dialog_action_positive"
            style="@style/HuaHanSoft.Dialog.Action"
            android:text="@string/huahansoft_sure"
            />

    </LinearLayout>
</LinearLayout>