<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/hhsoft_rl_picture_bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/picture.bottom.bg"
        android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/hhsoft_tv_picture_folder_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/hhsoft_picture_bottom_folder_arrow"
            android:paddingBottom="14dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="14dp"
            android:text="@string/hhsoft_picture_title_name"
            android:textColor="@color/defaultWhite"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/hhsoft_tv_picture_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingBottom="14dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="14dp"
            android:text="@string/hhsoft_picture_preview"
            android:textColor="?picture.preview.textColor"
            android:textSize="14sp"/>
        <LinearLayout
            android:id="@+id/hhsoft_ll_picture_original"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:padding="10dp">
            <ImageView
                android:id="@+id/hhsoft_iv_picture_original"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/picture_folder_selector"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/hhsoft_picture_original"
                android:textColor="@color/defaultWhite"
                android:textSize="14sp" />
        </LinearLayout>

    </RelativeLayout>
    <FrameLayout
        android:id="@+id/hhsoft_fl_picture_floder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/hhsoft_rl_picture_bottom_nav"
        android:background="@color/defaultHalfTransparent"
        android:visibility="gone">
        <ListView
            android:id="@+id/hhsoft_lv_picture_floder"
            style="@style/HuaHanSoft.ListView"
            android:dividerHeight="0dp"
            android:layout_gravity="bottom"
            android:background="@color/defaultWhite"
            android:layout_marginTop="48dp"
            android:visibility="gone">

        </ListView>
    </FrameLayout>
</RelativeLayout>